--- a/weather.html
+++ b/weather.html
@@ -15,12 +15,12 @@
         <form id="myForm">
             <p>Please enter your zip: <input type="text" min=\'5\'maxlength='5' name="zip"/></p>
             <p>Which forecast would you like?:<br /></p>
-                <label>3-Day</label><input type="radio" name="forecast" value="forecast"/><br />
-                <label>Hourly</label><input type="radio" name="forecast" value="hourly"/><br />
-                <label>Almanac</label><input type="radio" name="forecast" value="almanac"/><br />
+            <label>3-Day</label><input type="radio" name="forecast" value="forecast"/><br />
+            <label>Hourly</label><input type="radio" name="forecast" value="hourly"/><br />
+            <label>Almanac</label><input type="radio" name="forecast" value="almanac"/><br />
             <p>Do you want metric or standard units?:<br /></p>
-                <label>Standard</label><input type="radio" name="units" value="standard"><br />
-                <label>Metric</label><input type="radio" name="units" value="metric"/><br /><br />
+            <label>Standard</label><input type="radio" name="units" value="standard"/><br />
+            <label>Metric</label><input type="radio" name="units" value="metric"/><br /><br />
             <input id="submit" type="button" name="sub" value="Submit"/>
         </form>
     </body>
